--- a/src/en/index.html
+++ b/src/en/index.html
@@ -164,7 +164,9 @@
       <div class="table-responsive">
         <label>Supporting Status (2022):</label>
         <table class="table table-sm table-striped w-auto m-auto text-nowrap">
-          <tr><td>◎</td><td>Android / Windows 11</td><td>fully supported</td>
+          <tr><td>◎</td><td>Android</td><td>fully supported</td>
+          <tr><td>◎</td><td>iOS / Mac</td><td>fully supported</td>
+          <tr><td>◎</td><td>Windows 11</td><td>fully supported</td>
           <tr><td>○</td><td>Linux</td><td>fully supported (but required emoji fonts)</td>
           <tr><td>△</td><td>Windows 10</td><td>some emojis are broken (ZWJ is not supported)</td>
           <tr><td>×</td><td>iOS / Mac</td><td>not supported (4bytes UTF8 is buggy)</td>
