--- a/src/index.html
+++ b/src/index.html
@@ -164,10 +164,11 @@
       <div class="table-responsive">
         <label>Supporting Status (2022):</label>
         <table class="table table-sm table-striped w-auto m-auto text-nowrap">
-          <tr><td>◎</td><td>Android / Windows 11</td><td>fully supported</td>
+          <tr><td>◎</td><td>Android</td><td>fully supported</td>
+          <tr><td>◎</td><td>iOS / Mac</td><td>fully supported</td>
+          <tr><td>◎</td><td>Windows 11</td><td>fully supported</td>
           <tr><td>○</td><td>Linux</td><td>fully supported (but required emoji fonts)</td>
           <tr><td>△</td><td>Windows 10</td><td>some emojis are broken (ZWJ is not supported)</td>
-          <tr><td>×</td><td>iOS / Mac</td><td>not supported (4bytes UTF8 is buggy)</td>
         </table>
       </div>
       <div class="pt-3">
@@ -177,6 +178,7 @@
       </div>
       <div class="text-muted">&copy; <a href="https://github.com/marmooo">marmooo</a></div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/grapheme-splitter@1.0.4/index.min.js"></script>
     <script src="/emoji-clicker/index.js"></script>
   </body>
 </html>
