--- a/src/index.html
+++ b/src/index.html
@@ -70,7 +70,7 @@
               <option>Animals</option>
               <option>Nature</option>
               <option>Food</option>
-              <option>Activity</option>
+              <option>Sports</option>
               <option>Travel</option>
               <option>Objects</option>
               <option>Necessaries</option>
