update japanese text

--- a/src/ja/index.html
+++ b/src/ja/index.html
@@ -132,7 +132,7 @@
             </div>
             <div role="button" class="card bg-light">
               <div class="emoji">🍣</div>
-              <div class="text">寿司</div>
+              <div class="text">すし</div>
             </div>
             <div role="button" class="card bg-light">
               <div class="emoji">🍡</div>
