--- a/src/index.html
+++ b/src/index.html
@@ -85,8 +85,12 @@
       <noscript>
         <div class="alert alert-warning">Please turn on Javascript.</div>
       </noscript>
-      <div id="noTTS" class="alert alert-warning text-center d-none">
-        Your browser does not support text-to-speech, please use Chrome / Safari.
+      <div id="noTTS" class="alert alert-warning d-none">
+        <p>Your browser does not support text-to-speech.
+        If you use Firefox for Linux, install the speech modules. For example:
+        </p>
+        <pre><code>sudo apt install speech-dispatcher
+sudo apt install festival speech-dispatcher-festival</code></pre>
       </div>
       <div id="infoPanel" class="row">
         <div class="col-sm">
