--- a/src/ja/index.html
+++ b/src/ja/index.html
@@ -1,6 +1,17 @@
 <!doctype html>
-<html lang="ja">
-  <head>
+<html lang="en">
+  <head prefix="og: http://ogp.me/ns#">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="ゲーム英語！音声に対応する絵文字をクリックしよう！">
+    <title>Emoji Clicker</title>
+    <meta property="og:title" content="Emoji Clicker">
+    <meta property="og:site_name" content="Emoji Clicker">
+    <meta property="og:description" content="ゲーム英語！音声に対応する絵文字をクリックしよう！">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://marmooo.github.io/emoji-clicker/">
+    <meta property="og:image" content="https://marmooo.github.io/emoji-clicker/favicon/apple-touch-icon.png">
+    <meta name="twitter:card" content="summary">
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-142997649-1"></script>
     <script>
@@ -10,10 +21,6 @@
 
       gtag('config', 'UA-142997649-1');
     </script>
-    <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Emoji Clicker</title>
-    <meta name="description" content="ゲーム英語！音声に対応する絵文字をクリックしよう！">
     <script>
       if ('serviceWorker' in navigator) {
         window.addEventListener('load', function() {
@@ -21,14 +28,10 @@
         });
       }
     </script>
+    <link rel="icon" type="image/png" href="/emoji-clicker/favicon/favicon.png">
+    <link rel="icon" type="image/svg+xml" href="/emoji-clicker/favicon/favicon.svg">
     <link rel="apple-touch-icon" sizes="180x180" href="/emoji-clicker/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="48x48" href="/emoji-clicker/favicon/favicon-48x48.png">
     <link rel="manifest" href="/emoji-clicker/favicon/site.webmanifest">
-    <link rel="mask-icon" href="/emoji-clicker/favicon/safari-pinned-tab.svg" color="#5bbad5">
-    <link rel="shortcut icon" href="/emoji-clicker/favicon/favicon.ico">
-    <meta name="msapplication-TileColor" content="#da532c">
-    <meta name="msapplication-config" content="/emoji-clicker/favicon/browserconfig.xml">
-    <meta name="theme-color" content="#ffffff">
     <link rel="alternate" href="https://marmooo.github.io/emoji-clicker/" hreflang="x-default">
     <link rel="alternate" href="https://marmooo.github.io/emoji-clicker/ja/" hreflang="ja">
     <link rel="alternate" href="https://marmooo.github.io/emoji-clicker/en/" hreflang="en">
@@ -56,7 +59,7 @@
       <nav class="navbar navbar-expand navbar-light">
         <div class="container flex-wrap">
           <a class="navbar-brand" href="/emoji-clicker/">
-            <img alt="Emoji Clicker" src="/emoji-clicker/favicon/favicon-48x48.png" width="32" height="32">
+            <img alt="Emoji Clicker" src="/emoji-clicker/favicon/favicon.svg" width="32" height="32">
             Emoji Clicker
           </a>
           <div class="navbar-nav">
