--- a/src/ja/index.html
+++ b/src/ja/index.html
@@ -24,7 +24,7 @@
     <script>
       if ('serviceWorker' in navigator) {
         window.addEventListener('load', function() {
-          navigator.serviceWorker.register('/emoji-clicker/sw.js');
+          navigator.serviceWorker.register('/emoji-clicker/ja/sw.js');
         });
       }
     </script>
