--- a/src/ja/index.html
+++ b/src/ja/index.html
@@ -3,11 +3,11 @@
   <head prefix="og: http://ogp.me/ns#">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="ゲーム英語！音声に対応する絵文字をクリックしよう！">
+    <meta name="description" content="ゲームで日本語の勉強！音声に対応する絵文字をクリックしよう！">
     <title>Emoji Clicker</title>
     <meta property="og:title" content="Emoji Clicker">
     <meta property="og:site_name" content="Emoji Clicker">
-    <meta property="og:description" content="ゲーム英語！音声に対応する絵文字をクリックしよう！">
+    <meta property="og:description" content="ゲームで日本語の勉強！音声に対応する絵文字をクリックしよう！">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://marmooo.github.io/emoji-clicker/">
     <meta property="og:image" content="https://marmooo.github.io/emoji-clicker/favicon/apple-touch-icon.png">
@@ -97,7 +97,7 @@ sudo apt install festival speech-dispatcher-festival</code></pre>
       </div>
       <div id="infoPanel" class="row">
         <div class="col-sm">
-          <p>ゲーム英語！音声に対応する絵文字をクリックしよう！</p>
+          <p>ゲームで日本語の勉強！音声に対応する絵文字をクリックしよう！</p>
         </div>
         <div class="col-sm">
           <div class="alert alert-info text-center">
