--- a/src/ja/index.html
+++ b/src/ja/index.html
@@ -63,11 +63,11 @@
             Emoji Clicker
           </a>
           <div class="navbar-nav">
-            <select id="lang" class="form-select form-select-sm" aria-label="lang">
+            <select title="言語" id="lang" class="form-select form-select-sm">
               <option value="ja" selected>日本語</option>
               <option value="en">English</option>
             </select>
-            <select id="courseOption" class="form-select form-select-sm" aria-label="course">
+            <select title="コース" id="courseOption" class="form-select form-select-sm">
               <option>人</option>
               <option>服</option>
               <option>動物</option>
@@ -79,7 +79,7 @@
               <option>必需品</option>
               <option>シンボル</option>
             </select>
-            <button title="toggle dark-mode" id="toggleDarkMode" class="fs-4 btn p-0 ms-1">🌓</button>
+            <button title="ダークモード切替" id="toggleDarkMode" class="fs-4 btn p-0 ms-1">🌓</button>
           </div>
         </div>
       </nav>
