--- a/src/ja/index.html
+++ b/src/ja/index.html
@@ -79,6 +79,7 @@
               <option>必需品</option>
               <option>シンボル</option>
             </select>
+            <button title="ふりがな" id="addFurigana" class="fs-4 btn p-0 ms-1">👧</button>
             <button title="ダークモード切替" id="toggleDarkMode" class="fs-4 btn p-0 ms-1">🌓</button>
           </div>
         </div>
