support multilingual sw.js

--- a/src/ja/index.html
+++ b/src/ja/index.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="ゲームで日本語の勉強！音声に対応する絵文字をクリックしよう！">
-    <title>Emoji Clicker</title>
-    <meta property="og:title" content="Emoji Clicker">
-    <meta property="og:site_name" content="Emoji Clicker">
+    <title>えもじクリッカー</title>
+    <meta property="og:title" content="えもじクリッカー">
+    <meta property="og:site_name" content="えもじクリッカー">
     <meta property="og:description" content="ゲームで日本語の勉強！音声に対応する絵文字をクリックしよう！">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://marmooo.github.io/emoji-clicker/">
@@ -30,7 +30,7 @@
     <link rel="icon" type="image/png" href="/emoji-clicker/favicon/favicon.png">
     <link rel="icon" type="image/svg+xml" href="/emoji-clicker/favicon/favicon.svg">
     <link rel="apple-touch-icon" sizes="180x180" href="/emoji-clicker/favicon/apple-touch-icon.png">
-    <link rel="manifest" href="/emoji-clicker/favicon/site.webmanifest">
+    <link rel="manifest" href="/emoji-clicker/favicon/ja.webmanifest">
     <link rel="alternate" href="https://marmooo.github.io/emoji-clicker/" hreflang="x-default">
     <link rel="alternate" href="https://marmooo.github.io/emoji-clicker/ja/" hreflang="ja">
     <link rel="alternate" href="https://marmooo.github.io/emoji-clicker/en/" hreflang="en">
@@ -58,8 +58,8 @@
       <nav class="navbar navbar-expand navbar-light">
         <div class="container flex-wrap">
           <a class="navbar-brand" href="/emoji-clicker/">
-            <img alt="Emoji Clicker" src="/emoji-clicker/favicon/favicon.svg" width="32" height="32">
-            Emoji Clicker
+            <img alt="えもじクリッカー" src="/emoji-clicker/favicon/favicon.svg" width="32" height="32">
+            えもじクリッカー
           </a>
           <div class="navbar-nav">
             <select title="言語" id="lang" class="form-select form-select-sm">
@@ -145,7 +145,7 @@ sudo apt install festival speech-dispatcher-festival</code></pre>
           <div class="col-sm-2"></div>
           <div class="col-sm alert alert-primary h3">
             <button id="voice" class="btn">🔊</button>
-            <span id="answer">Emoji Clicker</span>
+            <span id="answer">えもじクリッカー</span>
           </div>
           <div class="col-sm-2"></div>
         </div>
