--- a/src/index.html
+++ b/src/index.html
@@ -77,7 +77,7 @@
               <option>Necessaries</option>
               <option>Symbols</option>
             </select>
-            <button title="toggle dark-mode" id="toggleDarkMode" class="fs-4 btn p-0 ms-1">🌓</button>
+            <button title="toggle dark-mode" id="toggleDarkMode" class="fs-4 btn p-0 ms-1" type="button">🌓</button>
           </div>
         </div>
       </nav>
@@ -104,10 +104,10 @@ sudo apt install festival speech-dispatcher-festival</code></pre>
                 <span id="time">60</span>
                 <span> / 60 sec</span>
               </div>
-              <button id="mode" class="btn btn-sm btn-secondary notranslate">EASY</button>
+              <button id="mode" class="btn btn-sm btn-secondary notranslate" type="button">EASY</button>
             </div>
             <div class="mt-2">
-              <button id="startButton" class="btn btn-primary btn-lg">START</button>
+              <button id="startButton" class="btn btn-primary btn-lg" type="button">START</button>
             </div>
           </div>
         </div>
@@ -142,7 +142,7 @@ sudo apt install festival speech-dispatcher-festival</code></pre>
         <div class="row">
           <div class="col-sm-2"></div>
           <div class="col-sm alert alert-primary h3">
-            <button id="voice" class="btn">🔊</button>
+            <button id="voice" class="btn" type="button">🔊</button>
             <span id="answer">Emoji Clicker</span>
           </div>
           <div class="col-sm-2"></div>
@@ -163,7 +163,7 @@ sudo apt install festival speech-dispatcher-festival</code></pre>
         <div class="h2 pb-3">
           <span id="score" class="h1 notranslate">0</span>
         </div>
-        <button id="restartButton" type="button" class="btn btn-primary btn-lg m-1">RESTART</button>
+        <button id="restartButton" class="btn btn-primary btn-lg m-1" type="button">RESTART</button>
       </div>
     </main>
     <footer class="pt-4 alert text-center">
