--- a/src/ja/index.html
+++ b/src/ja/index.html
@@ -77,8 +77,8 @@
               <option>必需品</option>
               <option>シンボル</option>
             </select>
-            <button title="ふりがな" id="addFurigana" class="fs-4 btn p-0 ms-1">👧</button>
-            <button title="ダークモード切替" id="toggleDarkMode" class="fs-4 btn p-0 ms-1">🌓</button>
+            <button title="ふりがな" id="addFurigana" class="fs-4 btn p-0 ms-1" type="button">👧</button>
+            <button title="ダークモード切替" id="toggleDarkMode" class="fs-4 btn p-0 ms-1" type="button">🌓</button>
           </div>
         </div>
       </nav>
@@ -105,10 +105,10 @@ sudo apt install festival speech-dispatcher-festival</code></pre>
                 <span id="time">60</span>
                 <span> / 60 sec</span>
               </div>
-              <button id="mode" class="btn btn-sm btn-secondary notranslate">EASY</button>
+              <button id="mode" class="btn btn-sm btn-secondary notranslate" type="button">EASY</button>
             </div>
             <div class="mt-2">
-              <button id="startButton" class="btn btn-primary btn-lg">スタート</button>
+              <button id="startButton" class="btn btn-primary btn-lg" type="button">スタート</button>
             </div>
           </div>
         </div>
@@ -143,7 +143,7 @@ sudo apt install festival speech-dispatcher-festival</code></pre>
         <div class="row">
           <div class="col-sm-2"></div>
           <div class="col-sm alert alert-primary h3">
-            <button id="voice" class="btn">🔊</button>
+            <button id="voice" class="btn" type="button">🔊</button>
             <span id="answer">えもじクリッカー</span>
           </div>
           <div class="col-sm-2"></div>
@@ -164,7 +164,7 @@ sudo apt install festival speech-dispatcher-festival</code></pre>
         <div class="h2 pb-3">
           <span id="score" class="h1 notranslate">0</span>
         </div>
-        <button id="restartButton" type="button" class="btn btn-primary btn-lg m-1">リスタート</button>
+        <button id="restartButton" class="btn btn-primary btn-lg m-1" type="button">リスタート</button>
       </div>
     </main>
     <footer class="pt-4 alert text-center">
