--- a/src/ja/index.html
+++ b/src/ja/index.html
@@ -38,7 +38,7 @@
     <style>
       #counter {
         font-size:10rem; width:12rem; height:12rem; line-height:12rem; border-radius: 50%;
-        background:tomato; margin:auto; }
+        background:tomato; color:black; margin:auto; }
       #catsWalk { height:30vh; text-align:center; position:relative; }
       .emoji { font-size:5rem; }
       .emoji-card { width:150px; margin:0.5rem; padding:1rem; }
@@ -162,7 +162,7 @@ sudo apt install festival speech-dispatcher-festival</code></pre>
       </div>
       <div id="countPanel" class="text-center d-none notranslate">
         <div id="countdown">
-          <div id="counter">3</div>
+          <div id="counter"></div>
           <span id="counter-emoji" class="emoji pt-3">🍢</span>
         </div>
       </div>
