--- a/src/ja/index.html
+++ b/src/ja/index.html
@@ -46,7 +46,7 @@
         .emoji { font-size:3rem; }
         .emoji-card { width:100px; margin:0.25rem; padding:0.5rem; }
       }
-      html[data-bs-theme="dark"] .navbar-brand > img { filter: invert(1) hue-rotate(180deg); }
+      html[data-bs-theme="dark"] .favicon { filter: invert(1) hue-rotate(180deg); }
       html[data-bs-theme="dark"] .btn-light {
         --bs-btn-color: #fff;
         --bs-btn-bg: var(--bs-gray-800);
@@ -66,7 +66,7 @@
       <nav class="navbar navbar-expand">
         <div class="container flex-wrap">
           <a class="navbar-brand" href="/emoji-clicker/">
-            <img alt="えもじクリッカー" src="/emoji-clicker/favicon/favicon.svg" width="32" height="32">
+            <img class="favicon" alt="えもじクリッカー" src="/emoji-clicker/favicon/favicon.svg" width="32" height="32">
             えもじクリッカー
           </a>
           <div class="navbar-nav">
