--- a/src/en/index.html
+++ b/src/en/index.html
@@ -66,7 +66,7 @@
       <nav class="navbar navbar-expand">
         <div class="container flex-wrap">
           <a class="navbar-brand" href="/emoji-clicker/">
-            <img class="favicon" alt="Emoji Clicker" src="/emoji-clicker/favicon/favicon.svg" width="32" height="32">
+            <img class="favicon" alt="" src="/emoji-clicker/favicon/favicon.svg" width="32" height="32">
             Emoji Clicker
           </a>
           <div class="navbar-nav">
