--- a/src/en/index.html
+++ b/src/en/index.html
@@ -455,6 +455,6 @@ sudo apt install festival speech-dispatcher-festival</code></pre>
       </div>
       <div class="text-muted">&copy; <a href="https://github.com/marmooo">marmooo</a></div>
     </footer>
-    <script src="/emoji-clicker/index.js"></script>
+    <script type="module" src="/emoji-clicker/index.js"></script>
   </body>
 </html>
