improve service worker

--- a/src/ja/index.html
+++ b/src/ja/index.html
@@ -21,11 +21,7 @@
       gtag('config', 'G-F2179JXDYY');
     </script>
     <script>
-      if ('serviceWorker' in navigator) {
-        window.addEventListener('load', function() {
-          navigator.serviceWorker.register('/emoji-clicker/ja/sw.js');
-        });
-      }
+      navigator.serviceWorker.register("/emoji-clicker/sw.js");
     </script>
     <link rel="icon" type="image/png" href="/emoji-clicker/favicon/favicon.png">
     <link rel="icon" type="image/svg+xml" href="/emoji-clicker/favicon/favicon.svg">
@@ -86,7 +82,6 @@
               <option>必需品</option>
               <option>シンボル</option>
             </select>
-            <button title="ふりがな" id="addFurigana" class="fs-4 btn p-0 ms-1" type="button">👧</button>
             <button title="ダークモード切替" id="toggleDarkMode" class="fs-4 btn p-0 ms-1" type="button">🌓</button>
           </div>
         </div>
